manifests/zigbee2mqtt/resources/service-auth.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: auth
  namespace: zigbee2mqtt
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc.cluster.local
